# nlin-prog

./: .gitignore  MAKEFILE  Makefile  README.md  pyproject.toml  requierments.txt
nlinprog/: constants.py  line_search.py  numerical_differentiation.py  utils.py
nlinprog/constrained/barrier/: barrier_functions.py  conjugate_gradient.py  quasi_newton.py
nlinprog/constrained/penalty/: conjugate_gradient.py  penalty_functions.py  quasi_newton.py
nlinprog/unconstrained/: conjugate_gradient.py  line_search.py  quasi_newton.py
src/nlinprog/: conjugate_gradient_direction.py  conjugate_gradient_solvers.py  constrained_solvers.py  inverse_hessian.py  line_search.py  newton_hessian.py  newton_solvers.py  numerical_differentiation.py  penalty_functions.py  solvers.py  unconstrained_solvers.py  utils.py
src/nlinprog/constrained/: constrained_solvers.py
src/nlinprog/unconstrained/: conjugate_gradient.py  line_search.py  quasi_newton.py
tests/: test_.py  test_approx_hessians.py  test_constrained_solvers.py  test_functions.py  test_newton_hessians.py  test_numerical_differentiation.py  test_solvers.py  test_unconstrained_solvers.py
tests/constrained/: constrained_test_functions.py
tests/constrained/barrier/: test_barrier_conjugate_gradient_methods.py  test_barrier_quasi_newton_methods.py
tests/constrained/penalty/: test_conjugate_gradient_methods.py  test_penalized_conjugate_gradient_methods.py  test_penalized_quasi_newton_methods.py  (+1 more)
tests/unconstrained/: test_conjugate_gradient_methods.py  test_quasi_newton_methods.py  unconstrained_test_functions.py
(+6 files in other folders)
