[tool.poetry]
name = "nlinprog"
version = "0.1.0"
description = "algorithms for nonlinear programming"
authors = ["Andrew Muth <agmuth@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
